k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: fastapi
        image: quay.io/rh-ee-mxavier/fastapi-ollama-integration:1.0.0
        ports:
        - name: http
          containerPort: 8080
        resources:
          limits:
            cpu: '2'
            memory: 4Gi
          requests:
            cpu: '1'
            memory: 4Gi
      - name: ollama
        image: quay.io/rh-aiservices-bu/ollama-ubi9:0.2.8
        imagePullPolicy: Always
        securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
        ports:
        - name: ollama
          containerPort: 11434
          protocol: TCP
        resources:
          limits:
            cpu: '4'
            memory: 8Gi
          requests:
            cpu: '4'
            memory: 8Gi
        readinessProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          timeoutSeconds: 8
          periodSeconds: 100
          successThreshold: 1
          failureThreshold: 3
        lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "/bin/ollama pull $MODEL_ID" ]
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /.ollama
          name: ollama-cache
      restartPolicy: Always
      volumes:
      - name: ollama-cache
        persistentVolumeClaim:
          claimName: ollama-cache
